# relay

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.chainwalker  Dockerfile.stress  FINAL_ASSESSMENT.md  LICENSE-APACHE  LICENSE-MIT  MULTICALL_IMPLEMENTATION_PLAN.md  Makefile  OPTIMIZATION_ANALYSIS.md  README.md  REFACTORING_REVIEW.md  build.rs  clean-commit.sh  clippy.toml  deny.toml  relay.example.yaml  rpc_cache_tests_summary.md  run.sh  run_cache_tests.sh  run_integration_tests.sh  settings.local.json  test_cache_behavior.sh
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: new-issue-for-tracking.md
.github/workflows/: claude-triage.yml  lint.yml  release.yml  unit.yml
.sqlx/: query-0009f8bf8c91e1694f89a301751726d5cc2ccf66d77f496560c1d5654992b450.json  query-0140239eaa8c0793250727f23a9d488ba6beb5c2c24cbeba4a861fcf59d53d3b.json  query-031bbaa1c3e44e0357b9fa4aa71ef46f0ead28775ee8fede54a867b62f979b8e.json  query-0587f9969d4b6ef1da06bb77575c689104b0767160b6f12037db8d5e360c34c0.json  query-0a2c41a3f52fc9b74c5559796bbd578f4539853b345f2b5a386446144acbf6a0.json  query-0e7a3fa8802afa71128f8195407a728fe5f09491fbcc77929268ce4bbc428055.json  query-0f1a5e9b2eedb2e38cfda959e28369c34c6f66944f93a82ce7d9acbb26739a64.json  query-110fdd402d29c3f5aa016c4f4bda551418ea75c3c14b54c6c25d6a844bbf1607.json  query-14ade94a76789f03ccbb4a8e9647957a69449a044a8c190cf03d3a7f4681001e.json  query-1bdad10a0a5ed69d7ef85b45a0e1589cf15f2747d5d48dc9062a65d33af8287d.json  query-21fdfd5f099a9fbfd3920e95e7dad2d60beaa400b2cbf84cd0af12a242dbaff4.json  query-2256d2a88b58f232bba2f92884fa7a61e72e130ae57d4bb9806750d9b350960f.json  query-270d917a154bd20ec47184954d32b8dc9db680a20013978620e4dfceb4ddaf95.json  query-28d16aa625b17b320d6e9736c545344645dbdabce9bbc4cf03c05711eb39c8f4.json  query-33dd359c94d1d2bff546581c45f99679bc5f0f84dcc18cf035f43ffb6a701887.json  query-3467bdaf82adedf2757a9754e5d44c6f602399d0e473d43ad0f52570b437b55f.json  query-349050d675179f714ad8cf61ad13a457aab1a08ffd7d73b63944aeba2fc6a36a.json  query-35bd868ca1c07b9f4873ecc64513619734c086df3c6cbd4fbd0903272a0ccb02.json  query-36c7612c5aa2121d5332b536d0bf36819458b13d6e351134ac5587fba53a0fbb.json  query-3736d16e4265d8779ca6c4f6f75a93857f14bfc2b13b6f601e6abfe018af02d8.json  query-37f2533e86d3ddd8b3b216ddbf2c0c3fc14c857fdd8c04fa10e1abafb3c41b0b.json  query-39bbc341ae66581e7b1edaa90a9c31f582a801a26ae06311c3628ca7065b2e09.json  query-3b97d246bc2bbb97755f84a94484e1772b22e2f663814de36609e8a7feaa19a3.json  query-42298767b4d0c49cbf76aa6224137b475dadd3d07e3c0c5f2e843a2bc48eaa09.json  query-4325db0dbbaa7043d2e4dc4e01e08413a09813c047d3ff23c672d57d958efc11.json  query-4609d1f0615f9094d2bd1db20baf486b3d50e8a7588e365232066d6496b329a1.json  query-475402016379ac086af8e1f9c898546fdff72c46a947a8e5070b666d72cb5346.json  query-4853be9c055ebe765a67c55251f42dbfe7e9cd33ba02568783a184f669e27c4c.json  query-4f4f8bd7f995f16a895eff8f5f0227d0f5f09b1699aa444c59b273b5a7cf4413.json  query-521a92e948a7f1850ee92b96ad8e64b41860e04d73254367bbf4cb46906466db.json  query-530e93d5b22f16dff6556e241d328ee6d7b75d7c82a4f2f310fc961c53da4c0a.json  query-53e65e533d25a0a5a06ee5a5304680357941fe731ab2913c9ef1b0e074e8b79b.json  query-587f2f6c4df6821e6a33d52ac964bb2b1938ba73ccb1f130959a675790a83bd5.json  query-58e36950f47c0cf88ee592d39bbc31de58f1822cd57ad253c8a7177a1928a7ce.json  query-5bfb9c1ab4700310b77f8bf2fd38d5e3c4e20b4f833f212b6c493f439a62483f.json  query-5d19bd26bec547a5e4026104e3f53fcc9bf20d442799f43ca5585822701dd197.json  query-600124940cbb2b7e408c94c01c30db2e81b68af9e72b9aa2f038ca902b988256.json  query-60a6599da9c3c316c5965152cd0130d6c2e3aac26c9fb7e00aac77041eb299f4.json  query-61d543bb427969c16cef65346865725bcfcdc5bfc2c7f6a0c8764aede15cece0.json  query-6231c55406e0016848bdab85f9b3780354e8660db417be86850fcaeb4ebbe08e.json  (+52 more)
.zed/: settings.json
benches/: multicall_bench.rs
docs/: README.md  phase2-multicall-plan.md  phase3-caching-plan.md  readme.md  spec.yaml
docs/apis/: rpc-reference.md
docs/architecture/: cross-chain.md  overview.md  porto-integration.md  rpc-endpoints.md  storage-layer.md  transaction-pipeline.md
docs/development/: debugging.md  getting-started.md  testing.md
docs/security/: cross-chain-security.md  intent-nonces.md  nonce-protection.md  overview.md  replay-prevention.md
docs/troubleshooting/: common-issues.md
migrations/: 0005_queue.sql  0006_entrypoint.sql  0006_orchestrator.sql  0007_orchestrator.sql  0008_intent.sql  0009_preCalls.sql  0011_emails.sql  0012_receipt.sql  0013_liquidity.sql  0013_pending_bundles.sql  0014_bridge.sql  0014_bundle_transactions_mapping.sql  0015_update_intent_structure.sql  0016_liquidity.sql  0016_refunds.sql  0019_refunds.sql  0020_layerzero_bundle_statuses.sql  0021_fix_constraint.sql  0023_layerzero_batch_tracking.sql  0023_readonly_user_account_view.sql  0024_precalls.sql  0025_authorization_list.sql  0026_phones.sql  0027_authorization_list_bundles.sql  0027_bundle_history_indexes.sql  0028_bundle_history_indexes.sql  0028_fee_payer_statuses.sql  0028_txs_add_tx_column.sql  0029_bundle_history_indexes.sql  0030_historical_usd_prices.sql  0031_asset_diffs.sql
plans/: relay-performance-optimization.md
scripts/: bundle.sh  release.sh
src/: asset.rs  chains.rs  cli.rs  config.rs  constants.rs  eip712.rs  error.rs  faucet.rs  lib.rs  main.rs  metrics.rs  nonce.rs  op.rs  otlp.rs  provider.rs  rpc.rs  signer.rs  spawn.rs  transport.rs  twilio.rs  upstream.rs  version.rs
src/backend/: event.rs  mod.rs
src/cache/: delegation.rs  metrics.rs  mod.rs  price.rs  token.rs
src/chains/: arb.rs  mod.rs  op.rs
src/cost/: coingecko.rs  constant.rs  mod.rs
src/diagnostics/: chain.rs  layerzero.rs  mod.rs
src/error/: asset.rs  auth.rs  contracts.rs  email.rs  intent.rs  keys.rs  merkle.rs  mod.rs  onramp.rs  op.rs  phone.rs  pricing.rs  quote.rs  simulation.rs  (+1 more)
tests/: e2e.rs  multicall_integration.rs  spawn_e2e_env.rs  tests.rs
tools/relay-tools/: Cargo.toml
tools/relay-tools/src/common/: format.rs  mod.rs  signatures.rs
(+391 files in other folders)
