[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/bin/relay.rs"
name = "relay"

[[bin]]
path = "src/bin/stress.rs"
name = "stress"

[dependencies]
alloy = { version = "0.14", features = [
    "getrandom",
    "dyn-abi",
    "eip712",
    "eips",
    "k256",
    "providers",
    "rlp",
    "rpc",
    "rpc-types",
    "serde",
    "signers",
    "signer-aws",
    "signer-local",
    "sol-types",
    "transports",
    "network",
] }
alloy-chains = "0.2"
async-trait = "0.1"
aws-config = "1.6"
aws-sdk-kms = "1.62"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
dashmap = "6.1.0"
eyre = "0.6.12"
futures-util = "0.3"
http = "1"
http-body = "1"
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16"
p256 = { version = "0.13", features = ["ecdsa"] }
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
toml = "*"
tokio = { version = "1.21", features = ["sync", "rt", "macros"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "std",
    "env-filter",
] }
url = { version = "2.5", features = ["serde"] }
rand = "0.9"
itertools = "0.14"
derive_more = { version = "2", features = ["debug"] }
bytes = "1"
metrics-derive = "0.1"
sqlx = { version = "0.8.3", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "macros",
] }

[dev-dependencies]
alloy = { version = "0.14", features = ["eips", "provider-anvil-node"] }
derive_more = { version = "2", features = ["debug"] }
dotenv = "0.15"
itertools = "0.14"
strum = "0.27"
strum_macros = "0.27"

[build-dependencies]
vergen = { version = "9.0", features = ["build", "cargo", "emit_and_set"] }
vergen-git2 = "1.0"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[lints]
rustdoc.all = "warn"
clippy.missing-const-for-fn = "allow" # TODO: https://github.com/rust-lang/rust-clippy/issues/14020

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
# unnameable-types = "warn"
# unreachable_pub = "warn"
unused_must_use = "deny"
