[package]
name = "relay"
version = "15.0.2"
edition = "2024"
publish = false

[[bin]]
path = "src/bin/relay.rs"
name = "relay"

[[bin]]
path = "src/bin/stress.rs"
name = "stress"

[dependencies]
alloy = { version = "1.0.22", features = [
    "std",
    "essentials",
    "provider-ws",
    "getrandom",
    "dyn-abi",
    "eip712",
    "eips",
    "json-rpc",
    "k256",
    "providers",
    "rlp",
    "rpc",
    "rpc-client",
    "rpc-types",
    "serde",
    "signers",
    "signer-local",
    "sol-types",
    "transports",
    "network",
    "json-rpc",
    "reqwest-rustls-tls",
    "signer-mnemonic",
    "signer-aws",
    "rand",
], default-features = false }
alloy-chains = "0.2"
async-trait = "0.1"
aws-config = "1.8"
aws-sdk-kms = { version = "1", default-features = false }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
eyre = "0.6.12"
futures-util = "0.3"
http = "1"
http-body = "1"
jsonrpsee = { version = "0.25", features = ["server", "client", "macros"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0" }
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
p256 = { version = "0.13", features = ["ecdsa"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
schnellru = "0.2.4"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
tokio = { version = "1.46", features = ["sync", "rt", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.0"
tracing-futures = { version = "0.2.5", features = ["std-future"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "std",
    "env-filter",
] }
url = { version = "2.5", features = ["serde"] }
rand = "0.9"
itertools = "0.14"
derive_more = { version = "2", features = ["debug"] }
bytes = "1"
metrics-derive = "0.1"
sqlx = { version = "0.8.5", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "macros",
    "bigdecimal",
] }
serde_yaml = "0.9.34"
resend-rs = { version = "0.15.0", default-features = false, features = [
    "rustls-tls",
] }
num-traits = "0.2"
num-bigint = "0.4"
ruint = { version = "1.1.0", features = ["num-bigint"] }
binance-sdk = { version = "8", features = ["wallet"] }
rust_decimal = "1"
strum = "0.27"
strum_macros = "0.27"

[dev-dependencies]
alloy = { version = "1.0.22", features = [
    "eips",
    "provider-anvil-node",
    "reqwest-rustls-tls",
], default-features = false }
alloy-primitives = { version = "1.2.1", features = ["rand"] }
derive_more = { version = "2", features = ["debug"] }
dotenvy = "0.15"
itertools = "0.14"
parking_lot = "0.12"
semver = "1.0.26"
tempfile = "3.20"

[build-dependencies]
vergen = { version = "9.0", features = ["build", "cargo", "emit_and_set"] }
vergen-git2 = "1.0"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests and dev build.
[profile.dev.package]
# Eth.
alloy-dyn-abi.opt-level = 3
alloy-json-abi.opt-level = 3
alloy-primitives.opt-level = 3
alloy-sol-type-parser.opt-level = 3
alloy-sol-types.opt-level = 3
ruint.opt-level = 3
tiny-keccak.opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[lints]
rustdoc.all = "warn"
clippy.missing-const-for-fn = "allow" # TODO: https://github.com/rust-lang/rust-clippy/issues/14020

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
# unnameable-types = "warn"
# unreachable_pub = "warn"
unused_must_use = "deny"

[workspace]
members = ["tools/xtask"]
