[package]
name = "relay-tools"
version = "0.1.0"
edition = "2024"
description = "Collection of tools for the Relay"
publish = false

[[bin]]
name = "chainwalker"
path = "src/bin/chainwalker/main.rs"

[dependencies]
alloy = { version = "1.0.24", features = [
    "std",
    "json-rpc",
    "providers",
    "reqwest-rustls-tls",
    "rpc-client",
    "rpc-types",
    "serde",
    "signers",
    "transports",
], default-features = false }
alloy-chains = "0.2.7"
clap = { version = "4.0", features = ["derive", "env"] }
eyre = "0.6"
jsonrpsee = { version = "0.26", features = ["client", "client-core", "http-client"] }
relay = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"